--- a/package.json
+++ b/package.json
@@ -6,9 +6,28 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.1",
     "@testing-library/user-event": "^7.2.1",
+    "axios": "^0.19.2",
+    "body-parser": "^1.19.0",
+    "bootstrap": "^4.4.1",
+    "connect": "^3.7.0",
+    "cookie-parser": "^1.4.4",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "lowdb": "^1.0.0",
+    "multer": "^1.4.2",
     "react": "^16.13.0",
+    "react-bootstrap": "^1.0.0-beta.17",
+    "react-datepicker": "^2.13.0",
     "react-dom": "^16.13.0",
-    "react-scripts": "3.4.0"
+    "react-dropdown": "^1.6.4",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.4.0",
+    "react-select": "^3.0.8",
+    "react-table": "^7.0.0-rc.16",
+    "react-table-6": "^6.11.0",
+    "reactstrap": "^8.4.1",
+    "update-json-file": "^1.1.1",
+    "whatwg-fetch": "^3.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
