--- a/.github/workflows/api-pr-review.yml
+++ b/.github/workflows/api-pr-review.yml
@@ -17,22 +17,21 @@ jobs:
           git fetch origin ${{ github.event.pull_request.base.ref }}
           git diff origin/${{ github.event.pull_request.base.ref }} > pr_diff.txt
 
-      - name: Call OpenAI for Review
+      - name: Debug OpenAI API Response
         id: ai_review
         run: |
-          RESPONSE=$(curl -s -X POST "https://api.openai.com/v1/chat/completions" \
-            -H "Authorization: Bearer ${{ secrets.OPENAI_API_KEY }}" \
-            -H "Content-Type: application/json" \
-            -d '{
-              "model": "gpt-4",
-              "messages": [
-                {"role": "system", "content": "You are an AI code reviewer. Analyze the given code diff and provide review comments with suggestions for improvement."},
-                {"role": "user", "content": "Review this code diff and suggest improvements:\n'"$(cat pr_diff.txt)"'"}
-              ]
-            }' | jq -r '.choices[0].message.content')
+    RESPONSE=$(curl -s -X POST "https://api.openai.com/v1/chat/completions" \
+      -H "Authorization: Bearer ${{ secrets.OPENAI_API_KEY }}" \
+      -H "Content-Type: application/json" \
+      -d '{
+        "model": "gpt-4",
+        "messages": [
+          {"role": "system", "content": "You are an AI code reviewer. Analyze the given code diff and provide review comments."},
+          {"role": "user", "content": "Review this code diff:\n'"$(cat pr_diff.txt)"'"}
+        ]
+      }')
 
-          echo "$RESPONSE" > "review_comment.txt"
-          echo "::set-output name=review::$RESPONSE"
+    echo "🔍 OpenAI Full Response: $RESPONSE"
 
       - name: Post AI Review Comment
         uses: peter-evans/create-or-update-comment@v3
