--- a/.github/workflows/api-pr-review.yml
+++ b/.github/workflows/api-pr-review.yml
@@ -28,7 +28,7 @@ jobs:
           RESPONSE=$(curl -s -X POST "https://api.openai.com/v1/chat/completions" \
             -H "Authorization: Bearer ${{ secrets.OPENAI_API_KEY }}" \
             -H "Content-Type: application/json" \
-            -d '{
+            -d 'data = {
               "model": "gpt-4",
               "messages": [
                 {"role": "system", "content": "You are an AI code reviewer. Provide a detailed review of the following code diff."},
