--- a/.github/workflows/api-pr-review.yml
+++ b/.github/workflows/api-pr-review.yml
@@ -37,7 +37,7 @@ jobs:
 
           # Construct the JSON payload safely using jq
           JSON_PAYLOAD=$(jq -n --arg diff "$DIFF_CONTENT" '{
-            "model": "gpt-4",
+            "model": "gpt-4-turbo",
             "messages": [
               { "role": "system", "content": "You are an expert code reviewer. Analyze the given code diff and provide constructive feedback." },
               { "role": "user", "content": ("Here is the code diff:\n" + $diff + "\nPlease review and provide comments.") }
