--- a/.github/workflows/api-pr-review.yml
+++ b/.github/workflows/api-pr-review.yml
@@ -1,19 +1,15 @@
-name: Snyk Security Scan
+name: PR Review with Danger.js
 
-on:
-  pull_request:
-    types: [opened, synchronize]
+on: pull_request
 
 jobs:
-  security:
+  danger:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Run Snyk to check for vulnerabilities
-        uses: snyk/actions/cli@master
+      - name: Run Danger.js
+        uses: danger/danger-js@9.1.2
         env:
-          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-        with:
-          args: test
+          DANGER_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
