--- a/.github/workflows/api-pr-review.yml
+++ b/.github/workflows/api-pr-review.yml
@@ -10,32 +10,66 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
-      - name: Get PR Diff
+      - name: Fetch PR Diff
         run: |
           git fetch origin ${{ github.event.pull_request.base.ref }}
-          git diff origin/${{ github.event.pull_request.base.ref }} > pr_diff.txt
+          git diff origin/${{ github.event.pull_request.base.ref }} HEAD > pr_diff.txt
+
+      - name: Debug PR Diff Content
+        run: |
+          echo "🔍 PR Diff Content:"
+          cat pr_diff.txt || echo "⚠️ No changes detected in diff!"
 
       - name: Call OpenAI for Review
         id: ai_review
+        shell: bash
         run: |
+          # Ensure pr_diff.txt exists and is not empty
+          if [ ! -f pr_diff.txt ] || [ ! -s pr_diff.txt ]; then
+            echo "⚠️ No code changes detected in PR or pr_diff.txt is missing. Skipping AI review."
+            exit 0
+          fi
+
+          # Read and escape PR diff content properly
+          DIFF_CONTENT=$(jq -Rs '.' < pr_diff.txt)
+
+          # Construct the JSON payload safely using jq
+          JSON_PAYLOAD=$(jq -n --arg diff "$DIFF_CONTENT" '{
+            "model": "gpt-3.5-turbo-instruct-0914",
+            "messages": [
+              { "role": "system", "content": "You are an expert code reviewer. Analyze the given code diff and provide constructive feedback." },
+              { "role": "user", "content": ("Here is the code diff:\n" + $diff + "\nPlease review and provide comments.") }
+            ]
+          }')
+
+          # 🔍 Debugging: Print the full JSON payload before sending it
+          echo "🔍 JSON Payload (Formatted):"
+          echo "$JSON_PAYLOAD" | jq .
+
+          # Call OpenAI API
           RESPONSE=$(curl -s -X POST "https://api.openai.com/v1/chat/completions" \
             -H "Authorization: Bearer ${{ secrets.OPENAI_API_KEY }}" \
             -H "Content-Type: application/json" \
-            -d '{
-              "model": "gpt-4",
-              "messages": [
-                {"role": "system", "content": "You are an AI code reviewer. Analyze the given code diff and provide review comments with suggestions for improvement."},
-                {"role": "user", "content": "Review this code diff and suggest improvements:\n'"$(cat pr_diff.txt)"'"}
-              ]
-            }' | jq -r '.choices[0].message.content')
+            -d "$JSON_PAYLOAD")
 
-          echo "$RESPONSE" > review_comment.txt
-          echo "::set-output name=review::$RESPONSE"
+          echo "🔍 OpenAI Full Response: $RESPONSE" # Debugging: print full API response
+          
+          # Extract the review comment from OpenAI's response
+          REVIEW_COMMENT=$(echo "$RESPONSE" | jq -r '.choices[0].message.content' || echo "⚠️ Error parsing AI response.")
 
-      - name: Post AI Review Comment
-        uses: peter-evans/create-or-update-comment@v3
+          if [ -z "$REVIEW_COMMENT" ] || [ "$REVIEW_COMMENT" = "null" ]; then
+            REVIEW_COMMENT="🤖 AI Review: No comments were generated. Please check the input or refine the prompt."
+          fi
+
+          echo "$REVIEW_COMMENT" > review_comment.txt
+          echo "::set-output name=review::$REVIEW_COMMENT"
+
+      - name: Post AI Review as PR Comment
+        uses: thollander/actions-comment-pull-request@v2
         with:
-          issue-number: ${{ github.event.pull_request.number }}
-          body: "${{ steps.ai_review.outputs.review }}"
+          message: |
+            **🤖 AI Code Review:**
+            ${{ steps.ai_review.outputs.review }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
