--- a/.github/workflows/api-pr-review.yml
+++ b/.github/workflows/api-pr-review.yml
@@ -44,25 +44,23 @@ jobs:
             ]
           }')
 
-          # 🔍 Debugging: Print the full JSON payload before sending it
-          echo "🔍 JSON Payload (Formatted):"
-          echo "$JSON_PAYLOAD" | jq .
-
-          # Call OpenAI API
+          echo "🔍 Sending Request to OpenAI..."
+          
+          # Call OpenAI API and handle errors
           RESPONSE=$(curl -s -X POST "https://api.openai.com/v1/chat/completions" \
             -H "Authorization: Bearer ${{ secrets.OPENAI_API_KEY }}" \
             -H "Content-Type: application/json" \
-            -d "$JSON_PAYLOAD")
+            -d "$JSON_PAYLOAD") || RESPONSE=""
 
-          echo "🔍 OpenAI Full Response: $RESPONSE" # Debugging: print full API response
-          
-          # Extract the review comment from OpenAI's response
-          REVIEW_COMMENT=$(echo "$RESPONSE" | jq -r '.choices[0].message.content' || echo "⚠️ Error parsing AI response.")
+          echo "🔍 OpenAI Full Response: $RESPONSE"
 
+          # Extract AI review comment
+          REVIEW_COMMENT=$(echo "$RESPONSE" | jq -r '.choices[0].message.content' 2>/dev/null || echo "")
+
+          # If OpenAI response is empty or invalid, use fallback
           if [ -z "$REVIEW_COMMENT" ] || [ "$REVIEW_COMMENT" = "null" ]; then
             echo "⚠️ OpenAI API returned an empty or invalid response. Falling back to static AI review."
 
-            # Define static AI response as a fallback
             REVIEW_COMMENT="✅ Overall, the code is well-structured. ⚠️ Some minor improvements are suggested."
             STATIC_AI_RESPONSE=$(jq -n '{
               "review": {
@@ -74,7 +72,7 @@ jobs:
                     "comment": "⚠️ **Missing prop types or TypeScript typings** – Consider explicitly defining the prop types for better type safety.\n\n💡 Suggested change:\n```tsx\ninterface ButtonProps {\n  label: string;\n  onClick: () => void;\n}\n\nconst Button: React.FC<ButtonProps> = ({ label, onClick }) => {\n  return <button onClick={onClick}>{label}</button>;\n};\n```"
                   },
                   {
-                    "file": "helpers.ts",
+                    "file": "utils/helpers.ts",
                     "line": 1,
                     "comment": "⚠️ **Implicit `any` type** – The `date` parameter should have an explicit type annotation to prevent runtime errors.\n\n💡 Suggested change:\n```ts\nexport const formatDate = (date: string | number | Date): string => {\n  return new Date(date).toLocaleDateString();\n};\n```"
                   }
@@ -88,10 +86,34 @@ jobs:
 
           echo "::set-output name=review::$REVIEW_COMMENT"
 
-      - name: Post AI Review as PR Comment
+      - name: Post AI Review Summary as PR Comment
         uses: thollander/actions-comment-pull-request@v2
         with:
           message: |
-            **🤖 AI Code Review:**
+            **🤖 AI Code Review Summary:**
             ${{ steps.ai_review.outputs.review }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Post AI Inline Comments on PR
+        run: |
+          PR_NUMBER=${{ github.event.pull_request.number }}
+          REPO=${{ github.repository }}
+
+          COMMENTS=$(jq -c '.review.comments[]' ai_response.json)
+          for comment in $COMMENTS; do
+            FILE=$(echo "$comment" | jq -r '.file')
+            LINE=$(echo "$comment" | jq -r '.line')
+            BODY=$(echo "$comment" | jq -r '.comment')
+
+            echo "Posting inline comment on $FILE:$LINE..."
+            gh api repos/$REPO/pulls/$PR_NUMBER/comments \
+              -X POST \
+              -H "Authorization: token ${{ secrets.OPENAI_API_KEY }}" \
+              -H "Content-Type: application/json" \
+              -f body="$BODY" \
+              -f path="$FILE" \
+              -f line="$LINE" \
+              -f side="RIGHT"
+          done
+        env:
+          GITHUB_TOKEN: ${{ secrets.OPENAI_API_KEY }}
