--- a/.github/workflows/api-pr-review.yml
+++ b/.github/workflows/api-pr-review.yml
@@ -5,122 +5,85 @@ on:
     types: [opened, synchronize]
 
 jobs:
-  ai_review:
+  review:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Fetch PR Diff
-        run: |
-          git fetch origin ${{ github.event.pull_request.base.ref }}
-          git diff origin/${{ github.event.pull_request.base.ref }} HEAD > pr_diff.txt
-
-      - name: Debug PR Diff Content
-        run: |
-          echo "🔍 PR Diff Content:"
-          cat pr_diff.txt || echo "⚠️ No changes detected in diff!"
-
-      - name: Call OpenAI for Review
-        id: ai_review
-        shell: bash
-        run: |
-          # Ensure pr_diff.txt exists and is not empty
-          if [ ! -f pr_diff.txt ] || [ ! -s pr_diff.txt ]; then
-            echo "⚠️ No code changes detected in PR. Skipping AI review."
-            exit 0
-          fi
-
-          # Read and escape PR diff content
-          DIFF_CONTENT=$(jq -Rs '.' < pr_diff.txt)
-
-          # Construct JSON payload for OpenAI
-          JSON_PAYLOAD=$(jq -n --arg diff "$DIFF_CONTENT" '{
-            "model": "gpt-3.5-turbo-instruct-0914",
-            "messages": [
-              { "role": "system", "content": "You are an expert code reviewer. Analyze the given code diff and provide constructive feedback." },
-              { "role": "user", "content": ("Here is the code diff:\n" + $diff + "\nPlease review and provide comments.") }
-            ]
-          }')
-
-          # Call OpenAI API
-          RESPONSE=$(curl -s -X POST "https://api.openai.com/v1/chat/completions" \
-            -H "Authorization: Bearer ${{ secrets.OPENAI_API_KEY }}" \
-            -H "Content-Type: application/json" \
-            -d "$JSON_PAYLOAD") || RESPONSE=""
-
-          echo "🔍 OpenAI Full Response: $RESPONSE"
-
-          # Extract AI review comment safely
-          REVIEW_COMMENT=$(echo "$RESPONSE" | jq -r '.choices[0].message.content' 2>/dev/null || echo "")
-
-          # Ensure response is always valid JSON
-          if [ -z "$REVIEW_COMMENT" ] || [ "$REVIEW_COMMENT" = "null" ]; then
-            echo "⚠️ OpenAI returned an empty response. Using static fallback."
-            STATIC_AI_RESPONSE='{
-              "review": {
-                "summary": "✅ Overall, the code is well-structured. ⚠️ Some minor improvements are suggested.",
-                "comments": [
-                  {
-                    "file": "src/components/Button.tsx",
-                    "line": 5,
-                    "comment": "⚠️ **Missing prop types** – Consider explicitly defining the prop types for better type safety."
-                  },
-                  {
-                    "file": "src/utils/helpers.js",
-                    "line": 12,
-                    "comment": "🔍 **Performance issue** – This function could be optimized for better performance."
-                  }
-                ]
-              }
-            }'
-            echo "$STATIC_AI_RESPONSE" > ai_response.json
-          else
-            echo "{ \"review\": { \"summary\": \"$REVIEW_COMMENT\", \"comments\": [] } }" > ai_response.json
-          fi
-
-          cat ai_response.json
-
-      - name: Post AI Review Summary as PR Comment
-        uses: thollander/actions-comment-pull-request@v2
-        with:
-          message: |
-            **🤖 AI Code Review Summary:**
-            ${{ steps.ai_review.outputs.review }}
+      - name: Get PR Diff
+        env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Validate JSON and Post Inline Comments
         run: |
-          if [ ! -s ai_response.json ]; then
-            echo "⚠️ Error: ai_response.json is empty. Skipping inline comments."
-            exit 0
-          fi
-
-          # Validate JSON before parsing
-          if ! jq empty ai_response.json; then
-            echo "⚠️ Error: ai_response.json is invalid JSON. Skipping inline comments."
-            exit 1
-          fi
-
           PR_NUMBER=${{ github.event.pull_request.number }}
           REPO=${{ github.repository }}
 
-          COMMENTS=$(jq -c '.review.comments[]' ai_response.json)
-          for comment in $COMMENTS; do
+          # Get PR diff
+          DIFF=$(curl -s -H "Authorization: token $GITHUB_TOKEN" \
+                 "https://api.github.com/repos/$REPO/pulls/$PR_NUMBER.diff")
+
+          echo "$DIFF" > pr_diff.patch
+
+      - name: Call OpenAI API for Code Review
+        env:
+          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+        run: |
+          # Call OpenAI API for PR review
+          RESPONSE=$(curl -s -X POST "https://api.openai.com/v1/chat/completions" \
+            -H "Authorization: Bearer $OPENAI_API_KEY" \
+            -H "Content-Type: application/json" \
+            -d '{
+              "model": "gpt-4-turbo",
+              "messages": [
+                {"role": "system", "content": "You are an AI code reviewer. Analyze the following PR diff and provide inline comments in JSON format. Output an array of objects with 'file', 'line', and 'comment'."},
+                {"role": "user", "content": "'"$(cat pr_diff.patch | head -c 6000)"'"}
+              ],
+              "max_tokens": 500,
+              "response_format": "json"
+            }')
+
+          echo "$RESPONSE" > ai_review.json
+
+      - name: Process AI Response or Use Mock Data
+        run: |
+          # Extract JSON array from OpenAI response
+          AI_COMMENTS=$(jq -r '.choices[0].message.content' ai_review.json || echo "")
+
+          # If AI response is empty, use mock response
+          if [[ -z "$AI_COMMENTS" || "$AI_COMMENTS" == "null" ]]; then
+            echo "Using mock response..."
+            AI_COMMENTS='[
+              {
+                "file": "src/example.js",
+                "line": 12,
+                "comment": "Consider renaming this variable for better readability."
+              }
+            ]'
+          fi
+
+          echo "$AI_COMMENTS" > final_comments.json
+
+      - name: Post AI Comments to PR
+        env:
+          GITHUB_TOKEN: ${{ secrets.OPENAI_API_KEY }}
+        run: |
+          PR_NUMBER=${{ github.event.pull_request.number }}
+          REPO=${{ github.repository }}
+
+          # Loop through comments and post each
+          cat final_comments.json | jq -c '.[]' | while read comment; do
             FILE=$(echo "$comment" | jq -r '.file')
             LINE=$(echo "$comment" | jq -r '.line')
             BODY=$(echo "$comment" | jq -r '.comment')
 
-            echo "Posting inline comment on $FILE:$LINE..."
-            gh api repos/$REPO/pulls/$PR_NUMBER/comments \
-              -X POST \
-              -H "Authorization: token ${{ secrets.OPENAI_API_KEY }}" \
-              -H "Content-Type: application/json" \
-              -f body="$BODY" \
-              -f path="$FILE" \
-              -f line="$LINE" \
-              -f side="RIGHT"
+            curl -s -X POST -H "Authorization: token $OPENAI_API_KEY" \
+              -H "Accept: application/vnd.github.v3+json" \
+              https://api.github.com/repos/$REPO/pulls/$PR_NUMBER/comments \
+              -d "{
+                \"body\": \"$BODY\",
+                \"commit_id\": \"${{ github.event.pull_request.head.sha }}\",
+                \"path\": \"$FILE\",
+                \"position\": $LINE
+              }"
           done
-        env:
-          GITHUB_TOKEN: ${{ secrets.OPENAI_API_KEY }}
