--- a/.github/workflows/api-pr-review.yml
+++ b/.github/workflows/api-pr-review.yml
@@ -102,4 +102,10 @@ jobs:
           FILE=$(echo "$COMMENT" | jq -r '.file')
           LINE=$(echo "$COMMENT" | jq -r '.line')
           TEXT=$(echo "$COMMENT" | jq -r '.comment')
-          
+          gh api repos/${{ github.repository }}/pulls/${{ github.event.pull_request.number }}/comments \
+          -X POST \
+          -F "body=$TEXT" \
+          -F "commit_id=$(git rev-parse HEAD)" \
+          -F "path=$FILE" \
+          -F "line=$LINE"
+          done < <(jq -c '.[]' inline_comments.json)
